@@ -36,6 +36,61 @@ package SPVM::CORE {
   native sub fseek : int ($fh : SPVM::FileHandle, $offset : long, $whence : int);
   native sub fclose : int ($fh : SPVM::FileHandle);
   
+  precompile sub split : string[] ($sep : string, $string : string, $max : int) {
+    my $string_length = length $string;
+    my $sep_length = length $sep;
+    
+    unless ($max < 0) {
+      croak "Max must be minus value.";
+    }
+    if ($sep_length == 0) {
+      croak "Separator must not be empty string";
+    }
+    
+    my $separated_strings_list = new_list([]);
+    
+    my $match_start = 0;
+    my $string_base = 0;
+    for (my $string_index = 0; $string_index < $string_length; $string_index++) {
+      if ($string->[$string_index] == $sep->[0]) {
+        $match_start = 1;
+      }
+      
+      if ($match_start) {
+        my $match = 1;
+        for (my $sep_index = 0; $sep_index < $sep_length; $sep_index++) {
+          if ($string_index + $sep_index > $string_length - 1) {
+            $match = 0;
+            last;
+          }
+          else {
+            unless ($string->[$string_index + $sep_index] == $sep->[$sep_index]) {
+              $match = 0;
+              last;
+            }
+          }
+        }
+        if ($match) {
+          my $separated_string = substr($string, $string_base, $string_index - $string_base);
+          $separated_strings_list->push($separated_string);
+          $string_base = $string_index + $sep_length;
+          $string_index += $sep_length - 1;
+        }
+      }
+    }
+    if ($string_base == $string_length) {
+      $separated_strings_list->push("");
+    }
+    else {
+      my $separated_string = substr($string, $string_base, $string_length - $string_base);
+      $separated_strings_list->push($separated_string);
+    }
+    
+    my $separated_strings = $separated_strings_list->to_strarray;
+    
+    return $separated_strings;
+  }
+  
   sub slurp_file : string ($file : string) {
     my $fh = fopen($file, "rb");
     unless ($fh) {
@@ -70,7 +125,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     my $length = @$replaces;
@@ -86,6 +141,37 @@ package SPVM::CORE {
     }
   }
 
+  precompile sub substr : string ($string : string, $offset : int, $length : int) {
+    
+    if ($string == undef) {
+      croak "String must be defined";
+    }
+    
+    my $string_length = length $string;
+    
+    if ($offset < 0 || $offset > $string_length - 1) {
+      croak "Invalid offset $offset";
+    }
+    
+    if ($length < 0) {
+      croak "Length must be non-zero value";
+    }
+    
+    if ($offset + $length > $string_length) {
+      croak "Offset + length must not be over array length";
+    }
+    
+    my $slice = new byte[$length];
+    
+    my $pos = 0;
+    for (my $i = $offset; $i < $offset + $length; $i++) {
+      $slice->[$pos] = $string->[$i];
+      $pos++;
+    }
+    
+    return (string)$slice;
+  }
+
   precompile sub sliceb : byte[] ($nums : byte[], $offset : int, $length : int) {
     
     if ($nums == undef) {
@@ -95,7 +181,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
@@ -126,7 +212,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
@@ -157,7 +243,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
@@ -188,7 +274,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
@@ -219,7 +305,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
@@ -250,7 +336,7 @@ package SPVM::CORE {
     my $array_length = @$nums;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
@@ -281,7 +367,7 @@ package SPVM::CORE {
     my $array_length = @$elems;
     
     if ($offset < 0 || $offset > $array_length - 1) {
-      croak "Invalid offset";
+      croak "Invalid offset $offset";
     }
     
     if ($length < 0) {
