@@ -1,6 +1,85 @@
 package TestCase::Lib::SPVM::CORE {
   use TestCase::Minimal;
 
+  sub test_split : int () {
+    {
+      my $str = "foo,bar,baz";
+      my $split_strs = split(",", $str, -1);
+      unless (equals_strarray($split_strs, ["foo", "bar", "baz"])) {
+        return 0;
+      }
+    }
+    
+    {
+      my $str = "foo,bar,";
+      my $split_strs = split(",", $str, -1);
+      unless (equals_strarray($split_strs, ["foo", "bar", ""])) {
+        return 0;
+      }
+    }
+
+    {
+      my $str = ",foo,,bar,,";
+      my $split_strs = split(",", $str, -1);
+      unless (equals_strarray($split_strs, ["", "foo", "", "bar", "", ""])) {
+        return 0;
+      }
+    }
+
+    {
+      my $str = "foo : bar : baz";
+      my $split_strs = split(" : ", $str, -1);
+      unless (equals_strarray($split_strs, ["foo", "bar", "baz"])) {
+        return 0;
+      }
+    }
+    {
+      my $str = "foo : bar : ";
+      my $split_strs = split(" : ", $str, -1);
+      unless (equals_strarray($split_strs, ["foo", "bar", ""])) {
+        return 0;
+      }
+    }
+    {
+      my $str = " : foo :  : bar :  : ";
+      my $split_strs = split(" : ", $str, -1);
+      unless (equals_strarray($split_strs, ["", "foo", "", "bar", "", ""])) {
+        return 0;
+      }
+    }
+
+    {
+      my $str = "foo---bar---baz";
+      my $split_strs = split("---", $str, -1);
+      unless (equals_strarray($split_strs, ["foo", "bar", "baz"])) {
+        return 0;
+      }
+    }
+    {
+      my $str = "foo---bar---";
+      my $split_strs = split("---", $str, -1);
+      unless (equals_strarray($split_strs, ["foo", "bar", ""])) {
+        return 0;
+      }
+    }
+    {
+      my $str = "---foo------bar------";
+      my $split_strs = split("---", $str, -1);
+      unless (equals_strarray($split_strs, ["", "foo", "", "bar", "", ""])) {
+        return 0;
+      }
+    }
+
+    {
+      my $str = "foo--!bar---baz";
+      my $split_strs = split("---", $str, -1);
+      unless (equals_strarray($split_strs, ["foo--!bar", "baz"])) {
+        return 0;
+      }
+    }
+    return 1;
+  }
+
   sub test_fgets : int ($file : string) {
     my $fh = fopen($file, "r");
     unless ($fh) {
