@@ -8,6 +8,7 @@
     [Before]"Point"
     [After]"Point[]"
   - SPVM::new_marray is merged to SPVM::new_oarray
+  - add split core function
 0.0418 2018-03-01
   - fix t/exe/exe.t bug
 0.0417 2018-03-01
